--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,30 +1,28 @@
 name: Infracost
 
 on:
-  pull_request:   # Запускати на кожному Pull Request
-    branches:
-      - main
+  pull_request:
+    paths:
+      - '**.tf'
+      - '**.tfvars'
 
 jobs:
   infracost:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Infracost
-        uses: infracost/actions/setup@v2
-        with:
-          api-key: ${{ secrets.INFRACOST_API_KEY }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform init
+      - name: Run Terraform init
         run: terraform init
 
-      - name: Generate Infracost cost estimate baseline
-        run: infracost breakdown --path=. --format=json --out-file=/tmp/infracost-base.json
-
-      - name: Comment PR with cost estimate
-        uses: infracost/actions/comment@v2
+      - name: Generate Infracost cost estimate
+        uses: infracost/infracost-gh-action@v2
         with:
-          path: /tmp/infracost-base.json
-          behavior: update
+          path: .
+        env:
+          INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
