Change infracost.yml 4

--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -2,6 +2,8 @@ name: Infracost
 
 on:
   pull_request:
+    branches:
+      - main
     paths:
       - '**.tf'
       - '**.tfvars'
@@ -14,15 +16,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
 
       - name: Run Terraform init
         run: terraform init
 
+      - name: Install Infracost
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
+
       - name: Generate Infracost cost estimate
-        uses: infracost/infracost-gh-action@v2
-        with:
-          path: .
+        run: |
+          terraform plan -out=tfplan.binary
+          terraform show -json tfplan.binary > plan.json
+          infracost breakdown --path plan.json --format github-comment --show-skipped --out-file infracost-comment.json
         env:
           INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
+
+      - name: Post Infracost comment
+        uses: infracost/actions@v3
+        with:
+          path: infracost-comment.json
+          github-token: ${{ secrets.GITHUB_TOKEN }}
