Remove .terraform directory from repo 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+# Terraform
+*.tfstate
+*.tfstate.*
 .terraform/
+.terraform.lock.hcl
+crash.log
+*.backup
+*.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
