--- a/.github/workflow/infracost.yml
+++ b/.github/workflow/infracost.yml
@@ -1,26 +1,45 @@
 name: Infracost
 
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
   infracost:
+    name: Infracost
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Infracost
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6 # або будь-яка стабільна версія, яку ти використовуєш
+
+      - name: Set up Infracost
         run: |
           curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
 
-      - name: Run Infracost
+      - name: Generate Infracost cost estimate
         env:
           INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
         run: |
-          infracost breakdown --path=. --format=json --out-file=infracost-out.json
+          terraform init
+          terraform plan -out=tfplan.binary
+          terraform show -json tfplan.binary > plan.json
+          infracost breakdown --path=plan.json \
+            --format=json \
+            --out-file=infracost-out.json
 
-      - name: Comment on PR
+      - name: Post Infracost comment to GitHub PR
         env:
           INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          infracost comment github --path=infracost-out.json
+          infracost comment github \
+            --path=infracost-out.json \
+            --repo=$GITHUB_REPOSITORY \
+            --github-token=$GITHUB_TOKEN \
+            --pull-request=${{ github.event.pull_request.number }} \
+            --behavior=update
